WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269938
REGRESSION (iOS 17.2) Script can not always start audio playback in the background
https://bugs.webkit.org/show_bug.cgi?id=269938
Summary
REGRESSION (iOS 17.2) Script can not always start audio playback in the backg...
Eric Carlson
Reported
2024-02-22 12:44:00 PST
Script is not always able start audio playback in the application is in the background
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2024-02-22 12:44:15 PST
rdar://121268089
Eric Carlson
Comment 2
2024-02-22 13:04:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24969
EWS
Comment 3
2024-02-24 10:55:43 PST
Committed
275285@main
(b39392ba956e): <
https://commits.webkit.org/275285@main
> Reviewed commits have been landed. Closing PR #24969 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug